# splent_feature_team

./: MANIFEST.in  pyproject.toml
src/splent_io/splent_feature_team/: __init__.py  commands.py  config.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_team/assets/css/: team.css
src/splent_io/splent_feature_team/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_team/migrations/: env.py
src/splent_io/splent_feature_team/migrations/versions/: 1bb39441d98d_splent_feature_team.py  3f76830b5164_splent_feature_team.py  tm0003_roles_m2m.py
src/splent_io/splent_feature_team/templates/team/: detail.html  index.html  list.html
src/splent_io/splent_feature_team/templates/team/admin/: form.html  list.html  roles.html
src/splent_io/splent_feature_team/tests/e2e/: test_browser.py
src/splent_io/splent_feature_team/tests/functional/: test_routes.py
src/splent_io/splent_feature_team/tests/integration/: test_repositories.py
src/splent_io/splent_feature_team/tests/load/: locustfile.py
src/splent_io/splent_feature_team/tests/unit/: test_services.py
src/splent_io/splent_feature_team/translations/: messages.pot
src/splent_io/splent_feature_team/translations/es/LC_MESSAGES/: messages.po
